fix:ahora se puede ver la periodicidad