@@ -65,7 +65,7 @@ public class Venta {
         this.fecha = fecha;
         this.dia = fecha.getDayOfWeek()
                 .getDisplayName(TextStyle.FULL,
-                        new Locale("es", "ES"));
+                        Locale.of("es", "ES"));
     }
 
     public Long getIdVenta() {
